Work in progress

--- a/sample-settings.ini
+++ b/sample-settings.ini
@@ -1,20 +1,12 @@
-[global]
-save_path = path/to/saves
-days_between_saves=5
-time_to_live=20
-folder_name=%Y-%m-%d--%Hh%M
-
-[mysql]
-user = mysql_user
-password = mysql_user_password
-
-[ftp]
-user = ftp_user
-password = ftp_user_password
-server = ftp.example.com
-save_path = path/to/ftp/save/folder
+[save]
+days_between_saves=5		;default number of days between each new save
+time_to_live=20			; default time to live for each save. They will be deleted after that
+folder_name=%Y-%m-%d--%Hh%M	;scheme used to name saves folder
+save_path = /path/to/saves 	;Path to local saves
+keep_local_saves=False 		;Keep saves on local system after they are backed up to remote host
+ftp_backup=ftp.eliotberriot.com ;Default FTP hosts where backup are sends (coma separated, without sapces)
 
 [mail]
-from=noreply@autosave.org
+from=noreply@autosave.org	
 smtp=localhost
-admins = admin@example.com
+admins = contact@eliotberriot.com,
