Added some comments in sample files

--- a/sample-hosts.ini
+++ b/sample-hosts.ini
@@ -1,13 +1,25 @@
-[ftp.example.com]
-type=FTP
-hostname=127.0.0.0
-username=username
-password=password
-save_path=/path/to/remote/save/folder
+# rename this file to hosts.ini
 
-[database.example.com]
-type=MySQL
-hostname=127.0.0.0
+
+[ftp_server1]
+type=ftpupload              # don't change this
+hostname=192.168.1.1        # ip adress or hostname like example.org
+username=username           # username to log on FTP host
+password=password
+save_path=/path/to/saves    # path to saves on ftp host. This directory must be created by hand  
+sftp=true                   # set to false if you don't want to use sftp
+
+[ftp_server2]               
+type=ftpupload              # You can have as many ftp_backup server as you want
+hostname=ftp.example.org    
+username=username           
+password=password
+save_path=/path/to/saves 
+sftp=false                  # this one is less secure
+
+[database_server]           
+type=MySQL                  # MySQL is the only database type available now
+hostname=127.0.0.0          # use 127.0.0.0 for database on localhost
 username=username
 password=password
 
