--- a/sample-settings.ini
+++ b/sample-settings.ini
@@ -1,12 +1,15 @@
-[save]
-days_between_saves=5		;default number of days between each new save
-time_to_live=20			; default time to live for each save. They will be deleted after that
-folder_name=%Y-%m-%d--%Hh%M	;scheme used to name saves folder
-save_path = /path/to/saves 	;Path to local saves
-keep_local_saves=False 		;Keep saves on local system after they are backed up to remote host
-ftp_backup=ftp.eliotberriot.com ;Default FTP hosts where backup are sends (coma separated, without sapces)
+[global]
+save_path = /home/eliotberriot/projects/savior/saves
+days_between_saves=5
+time_to_live=20
+min_saves_number=2
+folder_name=%Y-%m-%d--%Hh%M
+ftp_backup=ftp.eliotberriot.com,ftp2.eliotberriot.com
 
 [mail]
-from=noreply@autosave.org	
-smtp=localhost
+from=noreply@autosave.org
+smtp_hostname=localhost
+#smtp_port=25
+#smtp_username=username
+#smtp_password=password
 admins = contact@eliotberriot.com,
