--- a/sample-hosts.ini
+++ b/sample-hosts.ini
@@ -1,12 +1,34 @@
-# rename this file to hosts.ini
+# Sample hosts file for savior instance
+# Hosts described in this file are used in settings.ini and datasets#
+# Rename this file to hosts.ini when you are done
 
+# At the moment, you can describre the following type of hosts :
+# - ftpupload : a FTP server used to store backups
+# - mysql : a mysql server to backup
+
+# Every host accept the following attributes:
+#
+# [a_unique_name_used_to_design_host]
+# type=one of the type mentioned before
+# hostname=an ip adress or a domain name
+# username=the username used to login
+# passwordthe password used to login
+# 
+# In addition, some hosts accept additionnal attributes,
+# as described in following sections
+#
+# You can add as many hosts as you want in this file but be careful :
+# use a UNIQUE name to designate each host
+
+# Two example of FTP backup hosts
 
 [ftp_server1]
 type=ftpupload              # don't change this
 hostname=192.168.1.1        # ip adress or hostname like example.org
 username=username           # username to log on FTP host
 password=password
-save_path=/path/to/saves    # path to saves on ftp host. This directory must be created by hand  
+save_path=/path/to/saves    # path to saves on ftp host. This directory MUST be created 
+                            # before savior is run
 sftp=true                   # set to false if you don't want to use sftp
 
 [ftp_server2]               
@@ -14,12 +36,14 @@ type=ftpupload              # You can have as many ftp_backup server as you want
 hostname=ftp.example.org    
 username=username           
 password=password
-save_path=/path/to/saves 
+save_path=/home/user/saves
 sftp=false                  # this one is less secure
 
+# One example of a MySQL server to backup
+
 [database_server]           
-type=MySQL                  # MySQL is the only database type available now
-hostname=127.0.0.0          # use 127.0.0.0 for database on localhost
+type=mysql                  
+hostname=127.0.0.0          # use 127.0.0.0 for  localhost
 username=username
 password=password
 
