--- a/sample-settings.ini
+++ b/sample-settings.ini
@@ -1,17 +1,62 @@
+# sample settings file for savior instance
+# rename to settings.ini when you are done
+# dont change sections name ([global], [mail]) or savior won't work
 
 
 [global]
-save_path = /home/eliotberriot/projects/savior/saves
-days_between_saves=5
-time_to_live=20
-min_saves_number=2
-folder_name=%Y-%m-%d--%Hh%M
-ftp_backup=ftp.eliotberriot.com,ftp2.eliotberriot.com
+# All settings in this section are used by default for each datasets.
+# some of them may be overriden in datasets files, under [global] section
+# have a look at files in datasets/examples to understand how to override settings
 
+# A local path where savior can store backup files before upload
+# MAY NOT be overriden
+save_path = saves
+# if set to false, save_path will be cleared after save are uploaded to backup servers
+# if you leave it to true, be aware that it can consume a significant amount of space
+# on your hard drive, depending of the size of datasets you want to save
+# MAY be overriden
+keep_local_saves = true
+
+# the number of days savior will wait before doing a new save
+# example values : 
+# days_between_saves=1 # will do a save every days
+# days_between_saves=0.5 # will do a save every 12 hours
+# MAY be overriden
+days_between_saves=5
+
+# the number of day savior will keep saves on backup servers
+# MAY be overriden
+time_to_live=20
+
+# with days_between_saves=5 and time_to_live=20, after 20 days,
+# savior will always have four saves (20/4) available
+
+# the minimum number of saves savior will always try to keep for each dataset
+# MAY be overriden
+min_saves_number=2
+
+# hosts (from hosts.ini) on which saves must be backed up
+# coma separated, without space
+# MAY be overriden
+ftp_backup=ftp_server1,ftp_server2
+
+# the characters string used to name save directories
+# DON'T CHANGE THIS UNLESS YOU REALLY NOW WHAT YOU ARE DOING
+folder_name=%Y-%m-%d--%Hh%M
+
+# savior can send mail to admins when backup process is done
+# settings in this section can't be overriden later
 [mail]
+
+# a list of admins email, coma-separated, without spaces
+admins = contact@eliotberriot.com,
+
+# from which adresse will these mails come from ?
 from=noreply@autosave.org
+
+# smtp settings
+# At the moment, only localhost is supported
 smtp_hostname=localhost
 #smtp_port=25
 #smtp_username=username
 #smtp_password=password
-admins = contact@eliotberriot.com,
