--- a/sample-settings.ini
+++ b/sample-settings.ini
@@ -32,6 +32,8 @@ time_to_live=20
 # savior will always have four saves (20/4) available
 
 # the minimum number of saves savior will always try to keep for each dataset
+# if actual the number of save for a dataset is lesser than or equal to this, 
+# saves won't be cleaned (even if they are older than time_to_live)
 # MAY be overriden
 min_saves_number=2
 
