--- a/sample-settings.ini
+++ b/sample-settings.ini
@@ -12,7 +12,7 @@
 # MAY NOT be overriden
 save_path = saves
 # if set to false, save_path will be cleared after save are uploaded to backup servers
-# if you leave it to true, be aware that it can consume a significant amount of space
+# if you leave it to true, be aware that it may consume a significant amount of space
 # on your hard drive, depending of the size of datasets you want to save
 # MAY be overriden
 keep_local_saves = true
