Changes to sample files

--- a/sample-settings.ini
+++ b/sample-settings.ini
@@ -62,7 +62,7 @@ folder_name=%Y-%m-%d--%Hh%M
 
     # a list of admins email, coma-separated, without spaces
 
-admins = contact@eliotberriot.com,
+admins = admin@example.org,
 
 # from which adresse will these mails come from ?
 
