remove all tabs

--- a/sample-hosts.ini
+++ b/sample-hosts.ini
@@ -28,7 +28,7 @@ hostname=192.168.1.1        # ip adress or hostname like example.org
 username=username           # username to log on FTP host
 password=password
 save_path=/path/to/saves    # path to saves on ftp host. This directory MUST be created 
-                            # before savior is run
+#                           # before savior is run
 sftp=true                   # set to false if you don't want to use sftp
 
 [ftp_server2]               
@@ -39,7 +39,7 @@ password=password
 save_path=/home/user/saves
 sftp=false                  # this one is less secure
 
-    # One example of a MySQL server to backup
+# One example of a MySQL server to backup
 
 [database_server]           
 type=mysql                  
