--- a/sample-hosts.ini
+++ b/sample-hosts.ini
@@ -23,27 +23,46 @@
 # Two example of FTP backup hosts
 
 [ftp_server1]
-type=ftpupload              # don't change this
-hostname=192.168.1.1        # ip adress or hostname like example.org
-username=username           # username to log on FTP host
-password=password
-save_path=/path/to/saves    # path to saves on ftp host. This directory MUST be created 
-#                           # before savior is run
-sftp=true                   # set to false if you don't want to use sftp
 
-[ftp_server2]               
-type=ftpupload              # You can have as many ftp_backup server as you want
+# don't change this
+type=ftpupload  
+
+# ip adress or hostname like example.org
+hostname=192.168.1.1 
+
+# credentials to log on FTP host
+username=username           
+password=password
+
+# path to saves on ftp host. This directory MUST be created 
+# before savior is run
+save_path=/path/to/saves  
+
+# set to false if you don't want to use sftp
+sftp=true                   
+
+[ftp_server2] 
+
+# You can have as many ftp_backup server as you want
+
+type=ftpupload              
 hostname=ftp.example.org    
 username=username           
 password=password
 save_path=/home/user/saves
-sftp=false                  # this one is less secure
+
+# this one is less secure
+sftp=false                  
 
 # One example of a MySQL server to backup
 
-[database_server]           
-type=mysql                  
-hostname=127.0.0.0          # use 127.0.0.0 for  localhost
+[database_server]  
+
+type=mysql
+
+# use 127.0.0.0 for localhost
+hostname=127.0.0.0  
+
 username=username
 password=password
 
