--- a/sample-settings.ini
+++ b/sample-settings.ini
@@ -66,7 +66,7 @@ admins = admin@example.org,
 
 # from which adresse will these mails come from ?
 
-from=noreply@autosave.org
+from=noreply@savior.org
 
 # smtp settings
 # At the moment, only localhost is supported
