--- a/sample-hosts.ini
+++ b/sample-hosts.ini
@@ -60,9 +60,9 @@ sftp=false
 
 type=mysql
 
-# use 127.0.0.0 for localhost
-hostname=127.0.0.0  
-
+# IP adress or hostname
+hostname=localhost  
+#port=666
 username=username
 password=password
 
