Added GNUv3 licence

--- a/sample-settings.ini
+++ b/sample-settings.ini
@@ -10,6 +10,8 @@
 # have a look at files in datasets/examples to understand how to override settings
 
 # A local path where savior can store backup files before upload
+# If you change this setting later, you're old saves won't be deleted or taken
+# in consideration anymore
 # MAY NOT be overriden
 
 save_path = saves
@@ -25,11 +27,12 @@ keep_local_saves = true
 # example values : 
 # days_between_saves=1 # will do a save every days
 # days_between_saves=0.5 # will do a save every 12 hours
+# (assuming your crontab is running more often)
 # MAY be overriden
 
 days_between_saves=5
 
-# the number of day savior will keep saves on backup servers
+# the number of day savior will keep each ave on backup servers after its creation
 # MAY be overriden
 
 time_to_live=20
