--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ settings.ini
 hosts.ini
 datasets/*
 logs/*
+fabfile.py
 !logs/.empty
 !datasets/examples/
 # OS generated files #
@@ -22,3 +23,4 @@ env_settings.py
 *.sql
 *.py[cod]
 *~
+.kate-swp
